--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- ----------- all linking here ------------ -->
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!---------------- header code start ------------------>
+    <!------------- header code start -------------->
     <header class="header">
       <div class="home">
         <div class="container">
@@ -79,8 +82,8 @@
         </div>
       </div>
     </header>
-    <!------------------ header code end ------------------->
-    <!------------------- info code start ----------------->
+    <!------------- header code end ---------------->
+    <!------------- info code start ---------------->
     <section class="info">
       <div class="container">
         <div class="row">
@@ -124,8 +127,8 @@
         </div>
       </div>
     </section>
-    <!---------------------- info code End ------------>
-    <!--------------------- Choose code start ------------>
+    <!------------------ info code End ------------->
+    <!---------------- Choose code start ----------->
     <section class="choose">
       <div class="container">
         <div class="row">
@@ -182,9 +185,161 @@
         </div>
       </div>
     </section>
-    <!--------------------- Choose end here ------------>
-    <!------------------- Boostrap js link here ------------>
+    <!---------------- Choose end here ------------>
+    <!--------------- Slider start here ------------>
+    <Section class="slider">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="owl-carousel owl-theme">
+              <div class="slider-item">
+                <div class="row">
+                  <div class="col-md-5">
+                    <div class="slider-text">
+                      <h4>Discover</h4>
+                      <h2>Upcoming Events</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipis- <br>cing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore magna aliqua. Quis ipsum sus-<br>pendisse ultrices gravida. Risus commodo viverra<br> maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="slider-img">
+                      <img src="images/slider.jpg" alt="slider" >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slider-item">
+                <div class="row">
+                  <div class="col-md-5">
+                    <div class="slider-text">
+                      <h4>Discover</h4>
+                      <h2>Upcoming Events</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipis- <br>cing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore magna aliqua. Quis ipsum sus-<br>pendisse ultrices gravida. Risus commodo viverra<br> maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="slider-img">
+                      <img src="images/slider.jpg" alt="slider">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slider-item">
+                <div class="row">
+                  <div class="col-md-5">
+                    <div class="slider-text">
+                      <h4>Discover</h4>
+                      <h2>Upcoming Events</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipis- <br>cing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore magna aliqua. Quis ipsum sus-<br>pendisse ultrices gravida. Risus commodo viverra<br> maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="slider-img">
+                      <img src="images/slider.jpg" alt="slider">
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </Section>
+    <!---------------- Slider end here ----------->
+    <!-------------- reserve start here ------------>
+    <section class="reservation">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 m-auto">
+            <div class="heading">
+              <h4>Reservation</h4>
+              <h2>Book your table</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2">
+            <form action="#" class="contact-form">
+              <div class="row g-3">
+                <div class="col">
+                 <div class="mb-3">
+                  <input type="text" class="form-control" placeholder="name" aria-label="name">
+                </div>
+                 <div class="mb-3">
+                  <input type="text" class="form-control" placeholder="date" aria-label="date">
+                </div>
+                 <div class="mb-3">
+                  <input type="text" class="form-control" placeholder="people" aria-label="people">
+                </div>
+                 </div>
+                <div class="col">
+                  <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="email" aria-label="email">
+                  </div>
+                  <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="time" aria-label="time">
+                  </div>
+                  <div class="mb-3">
+                    <a href="#" class="btn btn-primary">find a table</a>
+                  </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---------------- reserve end here ----------->
+    <!--------------- footer start here ------------>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="main-footer">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="footer-img">
+                    <img src="images/footer-logo.png" alt="footer-logo">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="footer-item">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="footer-item2">
+                    <p><img src="images/location.png" alt="location">Main Road, Building Name, Country</p>
+                    <p><img src="images/Email.png" alt="email">info@companyname.com</p>
+                  </div>
+                </div>
+              </div>
+              <div class="copyright">
+                <div class="row">
+                  <div class="col-md-6">
+                    <p>&copy; <a href="https://www.facebook.com/" target="_blank">Kabir Hossain</a> 2022. All rights reserved.</p>
+                  </div>
+                  <div class="col-md-6">
+                    <ul class="social-icon">
+                      <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                      <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                      <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--------------- footer end here ------------>
+    <!------------- Boostrap js link here ---------->
+    <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/custom.js"></script>
   </body>
 </html>
