--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   </div>
                   <div class="col-md-7">
                     <div class="slider-img">
-                      <img src="images/slider.jpg" alt="slider">
+                      <img src="images/slider2.jpg" alt="slider">
                     </div>
                   </div>
                 </div>
@@ -235,7 +235,7 @@
                   </div>
                   <div class="col-md-7">
                     <div class="slider-img">
-                      <img src="images/slider.jpg" alt="slider">
+                      <img src="images/slider3.jpg" alt="slider">
                     </div>
                   </div>
                 </div>
